# OpenIGTLink

./: .binstar.yml  CMakeLists.txt  README.md  meta.yaml  setup.py
IGTLinkPython/: IGTLinkPython.py  OpenIGTLink.py  helpers.py
IGTLinkPython/ExampleFiles/: ExampleMessages.txt  Model.csv  ModelReceived.csv
Notebooks/: Example of use.ipynb  Untitled.ipynb
Notebooks/.ipynb_checkpoints/: Example of use-checkpoint.ipynb  Untitled-checkpoint.ipynb
OpenIGTLink/: OpenIGTLink.py  __init__.py  helpers.py
OpenIGTLink.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
OpenIGTLink/ExampleFiles/: ModelReceived.csv
code/: IGTLink.py  PhidgetIGTLink.py  Test.py  Try.py
